# project-euler

./: .gitignore  .pylintrc  LICENSE  README.md  go.mod  jest.config.js  package-lock.json  package.json  pip_requirements.txt  project-euler.cabal
.github/workflows/: go.yml  python.yml  typescript.yml
.husky/: pre-commit
src/: Main.hs  answers.json  solve.ts
src/001/: P001.hs  p001.py  p001.ts
src/002/: P002.hs  p002.go  p002.py  p002.ts  solution.md
src/003/: P003.hs  p003.go  p003.py  p003.ts
src/004/: P004.hs  README.md  p004.go  solution.md
src/005/: P005.hs  README.md  p005.go  p005.py  p005.ts  solution.md
src/006/: P006.hs  README.md  p006.go  p006.py  solution.md
src/007/: p007.ts
src/008/: README.md  p008.go  p008.py  p008.ts
src/009/: p009.go  p009.ts  solution.md
src/010/: README.md  p010.go  p010.py  p010.ts
src/011/: README.md  p011.go  p011.ts  solution.md
src/012/: README.md  p012.go  p012.py  p012.ts  solution.md
src/013/: p013.py  solution.md
src/014/: README.md  p014.go  p014.py  p014.ts  solution.md
src/015/: README.md  p015.go  p015.ts
src/016/: p016.go  p016.py  p016.ts  solution.md
src/017/: p017.go  p017.py  p017.ts  solution.md
src/018/: README.md  p018.go  solution.md
src/019/: p019.go  p019.ts  solution.md
src/020/: README.md  p020.go  p020.py  p020.ts  solution.md
src/021/: p021.go  p021.py
src/022/: README.md  p022.go  p022.py
src/023/: README.md  p023.go  solution.md
src/024/: p024.go
src/025/: solution.md
src/026/: README.md  p026.go  p026.py  solution.md
src/027/: README.md  p027.go  (+2 more)
(+392 files in other folders)
