cabal-version: 3.0

name:          project-euler
version:       0.1.0.0
license:       NONE
author:        Sunil Pandey
maintainer:    64631561+sunilbpandey@users.noreply.github.com

build-type:    Simple

extra-doc-files:
    README.md

common warnings
    ghc-options: -Wall

executable project-euler
    import:
        warnings
    main-is:
        Main.hs
    other-modules:
        P001.P001
        P002.P002
        P003.P003
        P004.P004
        P005.P005
        P006.P006
        P007.P007
        P008.P008
        P009.P009
        P010.P010
        P011.P011
        P012.P012
        P013.P013
        P014.P014
        P015.P015
        P016.P016
        P017.P017
        P018.P018
        P019.P019
        P020.P020
        P021.P021
        P022.P022
        ProjectEuler.Common
        ProjectEuler.PrimeUtils
    build-depends:
        base ^>=4.17.2.1
      , containers ^>=0.6
    hs-source-dirs:
        src
    default-language:
        Haskell2010
